adding html and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Todo List</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="left-container">
+        <h2>left</h2>
+      </div>
+      <div class="right-container">
+        <h2>right</h2>
+      </div>
+    </div>
+  </body>
 </html>
