--- a/index.html
+++ b/index.html
@@ -8,12 +8,57 @@
     <title>Todo List</title>
   </head>
   <body>
-    <div class="main-container">
-      <div class="left-container">
-        <h2>left</h2>
-      </div>
-      <div class="right-container">
-        <h2>right</h2>
+    <div class="container">
+      <div class="row">
+        <div class="row-item-1">
+          <header>
+            <div class="search">
+              <form action="">
+                <input type="text" />
+                <button>🔍</button>
+              </form>
+            </div>
+            <div class="scheduled">
+              <div class="scheduled-item-1">
+                <a href="#">Today</a>
+                <a href="#">Scheduled</a>
+              </div>
+              <div class="scheduled-item-2">
+                <a href="#">All</a>
+                <a href="#">Flagged</a>
+              </div>
+            </div>
+          </header>
+          <div class="my-lists">
+            <h3>My Lists</h3>
+            <ul>
+              <li class="list-item">
+                <img src="images/icon-list.svg" alt="list icon" />
+                Today
+              </li>
+              <li class="list-item">
+                <img src="images/icon-list.svg" alt="list icon" />
+                Today
+              </li>
+              <li class="list-item">
+                <img src="images/icon-list.svg" alt="list icon" />
+                Today
+              </li>
+              <li class="list-item">
+                <img src="images/icon-list.svg" alt="list icon" />
+                Today
+              </li>
+              <li class="list-item">
+                <img src="images/icon-list.svg" alt="list icon" />
+                Today
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row-item-2">
+          <h2>right</h2>
+        </div>
       </div>
     </div>
   </body>
