playing around with flex

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="row-item-2">
-          <h2>right</h2>
+          <img src="images/icon-add.svg" alt="add button" class="icon-add" />
         </div>
       </div>
     </div>
