feat: add insert adjacent html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <script defer src="app.js"></script>
   <title>Todo App</title>
 </head>
 
 <body>
   <div class="header">
     <h1>Todo app</h1>
-    <input type="text" class="input" placeholder="todo...">
-    <button>add</button>
+    <div class="input-div">
+      <input type="text" class="input" placeholder="todo...">
+      <button class="btn">add</button>
+    </div>
     <ul class="ul-list">
       <li>groceries</li>
       <li>KM assignment</li>
