--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <script defer src="app.js"></script>
+  <script defer src="script.js"></script>
   <title>Todo App</title>
 </head>
 
@@ -25,7 +25,7 @@
       <li>KM assignment</li>
       <li>SoC assignment</li>
       <li>IBA assignment</li>
-      <li class="checked">move stuff</li>
+      <li>move stuff</li>
     </ul>
   </div>
 
